[project]
name = "seed-gen"
version = "0.1.0"
description = "Intelligent test case generation for fuzzing"
readme = "README.md"
authors = [
    { name = "Trail of Bits", email = "opensource@trailofbits.com" },
]
license = "AGPL-3.0"
requires-python = ">=3.12,<3.13"
keywords = ["test-generation", "input-generation", "fuzzing", "seed-corpus", "llm", "ai", "cybersecurity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "redis ~= 5.2.1",
    "common",
    "wasmtime ~= 29.0.0",
    "program-model",
    "numpy ~= 2.2.3",
    "rapidfuzz ~= 3.12.2",
    "langgraph ~= 0.5.2",
    "langchain ~= 0.3.20",
    "python-dotenv ~= 1.0.1",
]

[tool.uv.sources]
common = { path = "../common", editable = true }
program-model = { path = "../program-model", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/buttercup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/trailofbits/buttercup"
Issues = "https://github.com/trailofbits/buttercup/issues"
Documentation = "https://github.com/trailofbits/buttercup#readme"

[dependency-groups]
dev = [
    "pytest ~= 8.3.4",
    "pytest-cov ~= 6.0.0",
    "ruff ~= 0.12.8",
    "mypy ~= 1.15.0",
    "types-redis ~= 4.6.0",
    "tqdm ~= 4.67.1",
]

[project.scripts]
"buttercup-seed-gen" = "buttercup.seed_gen._cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/buttercup"]
omit = ["*/tests/*", "*/__cli__.py", "*/_cli.py", "src/seed_gen/_cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = "buttercup"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["COM812", "ISC001"]  # Formatter conflicts

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]  # Allow asserts, no docstrings in tests
"test/**/*.py" = ["S101", "D"]  # Allow asserts, no docstrings in tests
"*/__cli__.py" = ["T201"]  # Allow print in CLI modules
"src/seed_gen/_cli.py" = ["T201"]  # Allow print in CLI module
[tool.interrogate]
# don't enforce documentation coverage for packaging, testing, the virtual
# environment, or the CLI (which is documented separately).
exclude = ["env", "test", "src/seed_gen/_cli.py"]
ignore-semiprivate = true
fail-under = 100
