[project]
name = "seed-gen"
version = "0.1.0"
description = "LLM seed generation and vulnerability discovery"
readme = "README.md"
authors = [
    { name = "Trail of Bits", email = "opensource@trailofbits.com" },
]
license = "AGPL-3.0-only"
dependencies = [
    "redis ~=5.2.1",
    "common",
    "wasmtime ~=29.0.0",
    "program-model",
    "numpy ~=2.2.3",
    "rapidfuzz ~=3.12.2",
    "langgraph ~=0.5.2",
    "langchain ~=0.3.20",
    "python-dotenv ~=1.0.1",
]
requires-python = ">=3.12,<3.13"

[tool.uv.sources]
common = { path = "../common", editable = true }
program-model = { path = "../program-model", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/buttercup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    # Testing tools
    "pytest ~=8.3.4",
    "pytest-cov ~=6.0.0",
    "pytest-asyncio ~=0.25.2",
    # Linting and type checking
    "ruff ~=0.12.8",
    "mypy ~=1.17.1",
    # Type stubs
    "types-redis ~=4.6.0",
    # Additional tools
    "tqdm ~=4.67.1",
]

[project.urls]
Repository = "https://github.com/trailofbits/buttercup"
Issues = "https://github.com/trailofbits/buttercup/issues"

[project.scripts]
"seed-gen" = "buttercup.seed_gen._cli:main"

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints
omit = ["src/seed_gen/_cli.py"]

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = "buttercup"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
include = ["src/**/*.py", "test/**/*.py", "eval/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "RET505", "PIE790", "B905", "SIM114"]
# D203 and D213 are incompatible with D211 and D212 respectively.
# COM812 and ISC001 can cause conflicts when using ruff as a formatter.
# See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules.
ignore = [
    "D203", "D213",  # Docstring formatting (conflicts with D212)
    "ISC001",  # Formatter conflicts
    # Still need work:
    "E501",   # Line too long
    "UP006",  # Use built-in collection types for type annotations
    "UP015",  # Unnecessary mode argument
    "UP035",  # Import from modern locations instead of deprecated typing
    "UP045",  # Use X | None for type annotations
    "UP046",  # Use modern generic class syntax
]

[tool.ruff.lint.per-file-ignores]
"src/seed_gen/_cli.py" = [
    "T201", # allow `print` in cli module
]
"test/**/*.py" = [
    "D",    # no docstrings in tests
    "S101", # asserts are expected in tests
]
[tool.interrogate]
# don't enforce documentation coverage for packaging, testing, the virtual
# environment, or the CLI (which is documented separately).
exclude = ["env", "test", "src/seed_gen/_cli.py"]
ignore-semiprivate = true
fail-under = 100
