[project]
name = "submit-challenge"
version = "0.1.0"
description = "Submit local challenges to Buttercup CRS"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
submit-challenge = "submit_challenge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/submit_challenge.py"]

[tool.hatch.build.targets.wheel.sources]
"src/submit_challenge.py" = "submit_challenge.py"